@@ -3,6 +3,11 @@ maven-debian-helper (1.4.3) UNRELEASED; urgency=low
   * DependenciesSolver: Don't use Properties.store() method since
     it escape some chars (like " >\=") from variables.
     Replace it with simple FileWriter. Closes: #628272.
+  * SysInstallMojo: Send "--keep-elements" flag to POMCleaner if its
+    set in <pkg>.poms file. Thanks to James Page <james.page@canonical.com>.
+    Closes: #613364
+  * mh_resolve_dependencies: Always launch Maven in offline mode
+    with --offline option (as already done on mh_make). Closes: #629356
 
  -- Damien Raude-Morvan <drazzib@debian.org>  Wed, 08 Jun 2011 00:51:52 +0200
 
